mudanca contas para o db.json

--- a/src/minhas_contas.html
+++ b/src/minhas_contas.html
@@ -170,7 +170,7 @@
 
                     <div class="row justify-content-center pb-4">
                         <div class="col-5" id="container-button">
-                            <div class="add-nova-conta d-flex align-items-center justify-content-center">Adicionar</div>
+                            <button type="submit" class="add-nova-conta d-flex align-items-center justify-content-center">Adicionar</button>
                             <div class="remove-conta align-items-center justify-content-center mt-4">Excluir</div>
                         </div>
                     </div>
