mudanca login e cadastro para o db.json e criacao de token de login

--- a/src/categorias.html
+++ b/src/categorias.html
@@ -81,7 +81,7 @@
                                     <a class="dropdown-item" href="./configuracao.html" onclick="configuracao()">Configurações</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item hover-sair">
-                                        <button class="btn-sair">
+                                        <button id='#btn-sair' class="btn-sair">
                                             Sair
                                         </button>
                                     </a>
