listagem contas em Painel Controle e Saldo Geral dinamico

--- a/src/home.html
+++ b/src/home.html
@@ -135,9 +135,9 @@
                                     </div>
 
                                     <div class="col-md-4 col-lg-5" id="container-valor">
-                                        <p>
+                                        <p >
                                             <span class="green">R$</span>
-                                            200,00
+                                            <span id="saldo-geral"></span>
                                         </p>
                                     </div>
                                 </div>
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="contas mt-4">
-                    <div class="" id="conta-1">
+                    <!-- <div class="" id="conta-1">
                         <div class="row align-items-center mb-4">
                             <div class="col-3 text-center">
                                 <img src="../docs/img/poupanca.png" alt="" srcset="">
@@ -182,9 +182,9 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="row align-items-center mb-4">
+                    <!-- <div class="row align-items-center mb-4">
                         <div class="col-3 text-center">
                             <img src="../docs/img/banco.png" width="64px" height="64px" alt="" srcset="">
 
@@ -202,9 +202,9 @@
                             </p>
 
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="row align-items-center mb-4">
+                    <!-- <div class="row align-items-center mb-4">
                         <div class="col-3 text-center">
                             <img src="../docs/img/banco.png" width="64px" height="64px" alt="" srcset="">
 
@@ -222,7 +222,7 @@
                             </p>
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -232,11 +232,6 @@
                         <h1>Últimos lançamentos</h1>
                     </div>
 
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
                 </div>
             </div>
 
