--- a/src/limites.html
+++ b/src/limites.html
@@ -140,40 +140,26 @@
             <!-- Botoes com valores -->
             <div class="row pl-3 pr-3" id="container-btn-valor">
                 
-                <div class="col-sm-3 col-md-3 text-center mb-3">
-                    <button class="btn" >
-                        R$ 500
-                    </button>
-                </div>
-
-                <div class="col-sm-3 col-md-3 text-center mb-3">
-                    <button class="btn" >
-                        R$ 1000
-                    </button>
-                </div>
-
-                <div class="col-sm-3 col-md-3 text-center mb-3">
-                    <button class="btn" >
-                        R$ 1500
-                    </button>
-                </div>
-
-                <div class="col-sm-3 col-md-3 text-center mb-3">
-                    <button class="btn" >
-                        R$ 2000
-                    </button>
-                </div>
+                <!--  -->
 
             </div>
 
-            <div class="row pb-5" id="container-novo-valor">
+            <div class="row pb-5 limites" id="container-novo-valor">
                 <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                    <p>Outro Valor</p>
+                    <form id="formLimites">
+                        <p>Outro Valor</p>
 
-                    <div class="d-flex justify-content-center align-items-center" id="btn-limite">
-                        <span >R$ </span>
-                        <input type="text">
-                    </div>
+                        <div class="d-flex justify-content-center align-items-center" id="btn-limite">
+                            <span >R$ </span>
+                            <input id="input-valor"  name="valor" type="number">
+                        </div>
+
+                        <div class="row justify-content-center mt-5">
+                            <div class="col-6">
+                                <button id="btn-confirmar" class="btn">Confirmar</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
