funcao para remover o limite

--- a/src/limites.html
+++ b/src/limites.html
@@ -156,7 +156,13 @@
 
                         <div class="row justify-content-center mt-5">
                             <div class="col-6">
-                                <button id="btn-confirmar" class="btn">Confirmar</button>
+                                <button id="btn-confirmar" name="confirme" class="btn">Confirmar</button>
+                            </div>
+                        </div>
+
+                        <div class="row justify-content-center mt-4">
+                            <div class="col-6">
+                                <button id="btn-remover" name="remover" style="background-color: #ff6e6e;border-radius: 50px; width: 100%; " class="btn">Remover Limite</button>
                             </div>
                         </div>
                     </form>
