finalizado com json-server

--- a/src/configuracao.html
+++ b/src/configuracao.html
@@ -77,7 +77,7 @@
                                 <p class="m-0">Minha Conta</p>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item">Usuário</a>
+                                    <a class="dropdown-item" id="nome-usuario">Usuário</a>
                                     <a class="dropdown-item" href="../docs/configuracao.html" onclick="configuracao()">Configurações</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item hover-sair">
