--- a/src/transacoes.html
+++ b/src/transacoes.html
@@ -77,7 +77,7 @@
                                 <p class="m-0">Minha Conta</p>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item">Usuário</a>
+                                    <a class="dropdown-item" id="nome-usuario">Usuário</a>
                                     <a class="dropdown-item" href="./configuracao.html" onclick="configuracao()">Configurações</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item hover-sair">
@@ -145,11 +145,11 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-center mb-5">
+                <!-- <div class="row justify-content-center mb-5">
                     <div class="col-8">
                         <button class="button-esqu">Transferência</button>
                     </div>
-                </div>
+                </div> -->
 
                 
             </div>
@@ -195,13 +195,13 @@
                     </div>
 
                     <!-- Data e Recorrencia -->
-                    <div class="row justify-content-center mb-5">
+                    <div class="row mb-5" style="padding-left: 23px;">
                         <div class="col-md-12 col-lg-4 mr-5 trans-date">
                             <label for="trans-input-date">Data</label>
                             <input name="data" id="trans-input-date" type="date">
                         </div>
                         
-                        <div class="col-md-12 col-lg-6">
+                        <!-- <div class="col-md-12 col-lg-6">
                             <label>Repetir lançamento?</label>
                             <div class="row recorrencia">
                                 <div class="col-5">
@@ -213,7 +213,7 @@
                                     <label for="parcelado">Parcelado</label>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="row justify-content-center mb-5">
