--- a/src/minhas_contas.html
+++ b/src/minhas_contas.html
@@ -43,23 +43,31 @@
                     <div class="col-12">
                         <div class="row h-100 justify-content-end" style="background-color: #5DA869;">
                             <div class="col-md-3 col-lg-2 d-flex flex-column justify-content-center align-items-center">
-                                <img id="img-painel-controle" src="../docs/img/Painel.png" alt="" srcset="">
-                                <p class="m-0">Painel Controle</p>
+                                <a href="./home.html">
+                                    <img id="img-painel-controle" src="../docs/img/Painel.png" alt="" srcset="">
+                                    <p class="m-0">Painel Controle</p>
+                                </a>
                             </div>
 
                             <div class="col-2 d-flex flex-column justify-content-center align-items-center">
-                                <img src="../docs/img/transacao.png" alt="" srcset="">
-                                <p class="m-0">Transações</p>
+                                <a href="./transacoes.html">
+                                    <img src="../docs/img/transacao.png" alt="" srcset="">
+                                    <p class="m-0">Transações</p>
+                                </a>
                             </div>
 
                             <div class="col-2 d-flex flex-column justify-content-center align-items-center">
-                                <img src="../docs/img/relatorio.png" alt="" srcset="">
-                                <p class="m-0">Relatórios</p>
+                                <a href="./relatorio.html">
+                                    <img src="../docs/img/relatorio.png" alt="" srcset="">
+                                    <p class="m-0">Relatórios</p>
+                                </a>
                             </div>
 
                             <div class="col-2 d-flex flex-column justify-content-center align-items-center">
-                                <img src="../docs/img/limite.png" alt="" srcset="">
-                                <p class="m-0">Limite Despesas</p>
+                                <a href="./limites.html">
+                                    <img src="../docs/img/limite.png" alt="" srcset="">
+                                    <p class="m-0">Limite Despesas</p>
+                                </a>
                             </div>
 
                             <div id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -69,10 +77,10 @@
                                 <p class="m-0">Minha Conta</p>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Usuário</a>
+                                    <a class="dropdown-item" id="nome-usuario">Usuário</a>
                                     <a class="dropdown-item" href="./configuracao.html" onclick="configuracao()">Configurações</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item hover-sair" href="#">
+                                    <a class="dropdown-item hover-sair">
                                         <button class="btn-sair">
                                             Sair
                                         </button>
