--- a/src/redefinir.html
+++ b/src/redefinir.html
@@ -77,7 +77,7 @@
                                 <p class="m-0">Minha Conta</p>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item">Usuário</a>
+                                    <a class="dropdown-item" id="nome-usuario">Usuário</a>
                                     <a class="dropdown-item" href="./configuracao.html" onclick="configuracao()">Configurações</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item hover-sair">
@@ -129,7 +129,7 @@
     </header>
 
     <main class="container">
-        <section class="redefinir">
+        <form id="formRedefinir" method="POST" class="redefinir">
 
             <!-- senha atual -->
             <div class="row mb-4">
@@ -182,7 +182,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <script type="module" src="./js/redefinir.js"></script>
+    <script src="./js/redefinir.js"></script>
 </body>
 
 </html>
