implementacao do backend com o mysql

--- a/src/redefinir.html
+++ b/src/redefinir.html
@@ -136,7 +136,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-8">
                     <label class="d-block">Senha atual: </label>
-                    <input type="text">
+                    <input id="atualPass" type="text">
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-8">
                     <label class="d-block">Nova senha: </label>
-                    <input type="text">
+                    <input id="newPass" type="text">
                 </div>
             </div>
 
@@ -154,7 +154,7 @@
                 <div class="col-sm-1 col-md-1"></div>
                 <div class="col-sm-12 col-md-8">
                     <label class="d-block">Confirmar senha: </label>
-                    <input type="text">
+                    <input id="confPass" type="text">
                 </div>
             </div>
 
