--- a/src/home.html
+++ b/src/home.html
@@ -265,6 +265,11 @@
                     </div>
 
                 </div>
+                <div class="row justify-content-end mt-4 pb-3">
+                    <div class="col-4">
+                        <a href="historico.html" style="font-size: 18px;">Ir para Histórico</a>
+                    </div>
+                </div>
             </div>
 
         </section>
