--- a/src/minhas_contas.html
+++ b/src/minhas_contas.html
@@ -171,7 +171,7 @@
                         </div>
 
                         <div class="col-3 container-input">
-                            <input id="inputSaldo" type="number">
+                            <input id="inputSaldo" type="number" step="0.01">
                         </div>
 
                     </div>
